Replaced some latex macros

--- a/Category of Groups.ipynb
+++ b/Category of Groups.ipynb
@@ -6,10 +6,10 @@
    "source": [
     "# The category of groups\n",
     "\n",
-    "When implementing a category in \\CapPkg, one should always have the corresponding classical\n",
+    "When implementing a category in CAP, one should always have the corresponding classical\n",
     "category in mind. In this example we start with the category of groups. The objects in this\n",
     "category will be the groups, the morphisms will be the homomorphisms of groups. Every category\n",
-    "in \\CapPkg is presented by a category \\GAP object. We start by creating this object."
+    "in CAP is presented by a category GAP object. We start by creating this object."
    ]
   },
   {
@@ -57,9 +57,9 @@
     "The string is just the name of the category we have created, and the object the variable\n",
     "\\texttt{grps} refers to stores information about the category. We can now continue by\n",
     "telling the category how operations on the objects or morphisms are performed by adding\n",
-    "functions the category. First, there should be a compose method for morphisms. In \\GAP\n",
-    "morphisms of groups are composed via the \\texttt{\\*} operator, so we use the two\n",
-    "argument function \\texttt{\\\\\\*} as function for \\textrm{PreCompose}."
+    "functions the category. First, there should be a compose method for morphisms. In GAP\n",
+    "morphisms of groups are composed via the `\\*` operator, so we use the two\n",
+    "argument function `\\*` as function for `PreCompose`."
    ]
   },
   {
@@ -75,7 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now the composition of two morphisms will be computed by the \\texttt{\\\\\\*} operation.\n",
+    "Now the composition of two morphisms will be computed by the `\\*` operation.\n",
     "Another thing every category needs is a function to compute the identity morphism. For this\n",
     "category of groups this can be done as follows."
    ]
@@ -183,8 +183,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now those groups are by \\CapPkg considered objects in the category \\texttt{grps}, and we can\n",
-    "ask them about their category. Also, they are now part of the \\GAP filter \\texttt{IsCapCategoryObject}."
+    "Now those groups are by CAP considered objects in the category `grps`, and we can\n",
+    "ask them about their category. Also, they are now part of the GAP filter `IsCapCategoryObject`."
    ]
   },
   {
@@ -279,7 +279,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Of course, one can also create a morphism between \\texttt{S3} and \\texttt{S4} and add it to the category.\n",
+    "Of course, one can also create a morphism between `S3` and `S4` and add it to the category.\n",
     "After that, we can also compose it with the identity morphism."
    ]
   },
@@ -329,9 +329,9 @@
    "metadata": {},
    "source": [
     "Please note that the constructors for objects and morphisms used in this example are the ones provided\n",
-    "by \\GAP itself, and the only ``change'' done to the data structure was adding it to the category.\n",
-    "This is one of the design principles of \\CapPkg. Already existing data structures and algorithms\n",
-    "can be integrated into the system with little to no effort, which makes it possible to integrate \\CapPkg\n",
+    "by GAP itself, and the only \"change\" done to the data structure was adding it to the category.\n",
+    "This is one of the design principles of CAP. Already existing data structures and algorithms\n",
+    "can be integrated into the system with little to no effort, which makes it possible to integrate CAP\n",
     "into many existing projects."
    ]
   }
